[package]
name = "pdblister"
description = "Faster version of `symchk /om` for generating PDB manifests of offline machines"
license-file = "LICENSE"
homepage = "https://github.com/microsoft/pdblister"
repository = "https://github.com/microsoft/pdblister"
version = "0.0.0"
authors = ["Gogs <gogs@fake.local>", "Justin Moore <jusmoore@microsoft.com>"]
edition = "2018"
# N.B: We used to publish to crates.io, but since this is a binary crate that doesn't make much sense
# so we've opted to publish binary releases instead.
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.13"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3"
indicatif = { version = "0.17.2", features = ["tokio"] }
mime = "0.3"
pdb = "0.8.0"
rand = "0.8"
reqwest = "0.11.13"
serde_json = "1.0.87"
thiserror = "1.0.37"
url = "2.5.4"
zerocopy = "0.6"

[dependencies.tokio]
version = "1.38.2"
features = ["full"]
